--- a/templates/admin.html
+++ b/templates/admin.html
@@ -16,7 +16,7 @@
     </div>
     <div class="container">
         <h1 class="text-center">Dashboard</h1>
-        {% if products.total == 0 %}
+        {% if products|length == 0 %}
         <p>Your store is empty.</p>
         {% else %}
         <table class="table table-striped mt-3">
