--- a/templates/home.html
+++ b/templates/home.html
@@ -15,6 +15,9 @@
         {% endwith %}
     </div>
     <div class="container">
+        {% if products|length == 0 %}
+        <h3 class="text-center mt-2">No products available.</h3>
+        {% else %}
         <div class="row">
             {% for product in products.items: %}
             <div class="col-md-3">
@@ -46,6 +49,7 @@
             </div>
             {% endfor %}
         </div>
+        {% endif %}
         <div class="row text-center mt-3">
             <div class="col">
                 {% if products.total > 8 %}
