modify code in cart items

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -17,7 +17,7 @@
     <div class="container">
         <h1 class="text-center">Dashboard</h1>
         {% if products|length == 0 %}
-        <p>Your store is empty.</p>
+        <h5>Your store is empty.</h5>
         {% else %}
         <table class="table table-striped mt-3">
             <th>S#</th>
