--- a/templates/edit_brand.html
+++ b/templates/edit_brand.html
@@ -12,7 +12,7 @@
         <div class="col-md-3"></div>
         <div class="col-md-6">
             {{render_form(form)}}
-            <a class="btn btn-warning" href="{{url_for('display_brands')}}" style="margin-top:-67px; margin-left: 260px;">Cancel</a>
+            <a class="btn btn-secondary" href="{{url_for('display_brands')}}" style="margin-top:-67px; margin-left: 260px;">Cancel</a>
         </div>
         <div class="col-md-3"></div>
     </div>
